--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+html {
+    font-family: sans-serif;
+}
+
+h1 {
+    text-align: center;
+    margin-top: 4rem;
+    text-transform: uppercase;
+}
