--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,10 @@ h1 {
 main p {
     color: red;
 }
+
+.jumbotron {
+    background-color: red;
+    color: white;
+    text-align: center;
+    padding: 3rem 0;
+}
