--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,10 @@ main p {
     text-align: center;
     padding: 3rem 0;
 }
+
+footer h3 {
+    text-align: center;
+    padding: 4rem 0;
+    background-color: aqua;
+    color: wheat;
+}
